# sanbomics

./: README.md  pyproject.toml
notebooks/: Untitled.ipynb  go_plots.ipynb  test_1.csv  volcano.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
sanbomics/: plots.py  tools.py
sanbomics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sanbomics/data/: human_ids.csv  mouse_ids.csv
