[build-system]
requires = ["setuptools>=61.0", "pandas==1.5.0", "numpy==1.23.3", "matplotlib==3.6.0", "seaborn==0.12.0", "adjustText==0.7.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sanbomics"
version = "0.0.1"
authors = [
  { name="Mark Sanborn", email="mark.email24@gmail.com" },
]
description = "bioinformatics plots and tools for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mousepixels/sanbomic"
"Bug Tracker" = "https://github.com/mousepixels/sanbomic"




