[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sanbomics"
version = "0.0.3"
authors = [
  { name="Mark Sanborn", email="mark.email24@gmail.com" },
]
description = "bioinformatics plots and tools for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"pandas>=1.0", "numpy>=1.17.0", "matplotlib>=3.4", "seaborn", "adjustText>=0.7.3"
]

[project.urls]
"Homepage" = "https://github.com/mousepixels/sanbomic"
"Bug Tracker" = "https://github.com/mousepixels/sanbomic"




